# listful

./: .bumpversion.cfg  .travis.yml  README.md  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonpublish.yml
listful/: __init__.py  exceptions.py  index.py  listful.py  types.py  utils.py
listful/_internal/: testing_utils.py
scripts/: timing.py
tests/: conftest.py  test_listful.py  test_testing_utils.py
