[tool.poetry]
name = "listful"
version = "0.1.2"
description = "efficient filtering of lists of objects"
authors = ["David S <d1618033@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/d1618033/listful"
homepage = "https://pypi.org/project/listful"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "^0.660.0"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"
radon = "^4.1.0"
byexample = "^9.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
